--- a/express/no-db/package.json
+++ b/express/no-db/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npx nodemon",
+    "start-not-build": "npx ts-node src/app.ts",
+    "dev": "nodemon src/app.ts",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +18,6 @@
     "@types/cookie-parser": "^1.4.5",
     "@types/cors": "^2.8.15",
     "@types/express": "^4.17.20",
-    "@types/jest": "^29.5.6",
     "@types/node": "^20.8.9",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.9.0",
@@ -40,7 +42,9 @@
     "typescript": "^5.2.2"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.10",
     "@types/jsonwebtoken": "^9.0.4",
+    "jest-mock-extended": "^3.0.5",
     "ts-jest": "^29.1.1"
   }
 }
