--- a/express/in-memory/package.json
+++ b/express/in-memory/package.json
@@ -12,15 +12,21 @@
   "dependencies": {
     "@faker-js/faker": "^8.2.0",
     "@types/bcrypt": "^5.0.1",
+    "@types/chai": "^4.3.9",
     "@types/cookie-parser": "^1.4.5",
     "@types/cors": "^2.8.15",
     "@types/express": "^4.17.20",
     "@types/jest": "^29.5.6",
+    "@types/mocha": "^10.0.3",
     "@types/node": "^20.8.9",
+    "@types/sinon": "^10.0.20",
+    "@types/superagent": "^4.1.20",
+    "@types/supertest": "^2.0.15",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.9.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "chai": "^4.3.10",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cookie-parse": "^0.4.0",
@@ -31,10 +37,15 @@
     "faker": "^6.6.6",
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
+    "mocha": "^10.2.0",
     "nodemon": "^3.0.1",
     "pg": "^8.11.3",
     "prettier": "^3.0.3",
     "reflect-metadata": "^0.1.13",
+    "sinon": "^17.0.0",
+    "sqlite3": "^5.1.6",
+    "superagent": "^8.1.2",
+    "supertest": "^6.3.3",
     "ts-node": "^10.9.1",
     "typeorm": "^0.3.17",
     "typescript": "^5.2.2"
