--- a/express/in-memory/package.json
+++ b/express/in-memory/package.json
@@ -4,13 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npx nodemon",
+    "start-not-build": "npx ts-node src/app.ts",
+    "dev": "nodemon src/app.ts",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@faker-js/faker": "^8.2.0",
+    "@jest-mock/express": "^2.0.2",
     "@types/bcrypt": "^5.0.1",
     "@types/chai": "^4.3.9",
     "@types/cookie-parser": "^1.4.5",
@@ -30,6 +34,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cookie-parse": "^0.4.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "eslint": "^8.52.0",
@@ -43,6 +48,7 @@
     "prettier": "^3.0.3",
     "reflect-metadata": "^0.1.13",
     "sinon": "^17.0.0",
+    "sqlite": "^5.1.1",
     "sqlite3": "^5.1.6",
     "superagent": "^8.1.2",
     "supertest": "^6.3.3",
@@ -51,7 +57,9 @@
     "typescript": "^5.2.2"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.8",
     "@types/jsonwebtoken": "^9.0.4",
+    "better-sqlite3": "^8.7.0",
     "ts-jest": "^29.1.1"
   }
 }
