--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ express/no-db/node_modules
 express/no-db/coverage
 express/in-memory/coverage
 express/in-memory/node_modules
+express/in-memory/dist
+express/no-db/dist
